데이터베이스 기반 api 수정 완료
